--- a/architecture/latex-document/nodes/exampleClasses/VaccumCleaner.tex
+++ b/architecture/latex-document/nodes/exampleClasses/VaccumCleaner.tex
@@ -1,8 +1,12 @@
 \begin{tabular}{p{\nodeTextWidthRatio\textwidth}} 
-\className{VaccumCleaner}
+\className{VaccumCleanerV0}
 
 \desc{in version 0, a cylinder with no wheels and stuff.}
 \\ \hline
 \\ \hline
-\end{tabular} 
+\method{evolve()}
+\desc{overriden}
 
+\method{te_required_delta_t()}
+\desc{overriden}
+\end{tabular} 
