--- a/architecture/latex-document/nodes/rootClasses/Shape.tex
+++ b/architecture/latex-document/nodes/rootClasses/Shape.tex
@@ -2,8 +2,9 @@
 \className{Shape}
 \\ \hline
 \\ \hline
-\method{boundingBox()}
-
+\method{bounding_box()}
 \desc{returns a x-y plane bounding box. Can be done using a generalized algorithm, no implemented only in the parent class.}
+
+\method{dump_info()}
 \end{tabular} 
 
